# polysolve

./: LICENSE  README.md  polysolve.py  pyproject.toml
.github/workflows/: test_florp.yml
docs/source/: conf.py  index.rst  usage.rst
docs/source/api/: polysolve.rst
polysolve/: __init__.py  polysolve.py
tests/: test_quadratic.py
