[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polysolve"
authors = [{name = "James", email = "james@somewhere.org"}]
requires-python = ">= 3.8"
readme = "README.md"
description = "Example project"
license = {file = "LICENCSE"}

keywords = ["maths"]
dependencies = ["numpy"]
classifiers = []
dynamic = ["version"]

[project.urls]
Homepage="https://github.com/james-muons/polysolve"
Repository="https://github.com/james-muons/polysolve.git"

[tool.setuptools.dynamic]
version = {attr = "polysolve.__version__"}
